First Html Draft

--- a/index.html
+++ b/index.html
@@ -4,12 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Connect and Fly</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
-    boxssss
+  <div class="container">
+    <header class="header">
+      <h1 class="logo"><a href="#"><img src="" alt="Connect and Fly logo"></a></h1>
+      <ul class="member">
+        <li><a href="./index.html">소개</a></li>
+        <li><a href="./English.html">영어</a></li>
+        <li><a href="./Mentoring.html">멘토링</a></li>
+      </ul>
+    </header>
+    <section class="mission">
+      <h1 class="mission__brand">
+        Believe and Connect
+      </h1>
+      <span class="mission__statement">
+        Believe and Connect는 한국을 전세계와 이어주는 사명을 가집니다. 
+        한국의 경력자분과 해당 학과 미국 대학생과 연결합니다.
+        해외 취업을 위한 영어를 효율적으로 준비할 수 있습니다.
+        또한, 해외취업을 희망하는 경력자와 유학생을 위해 현지 취업에 성공한 멘토를 연결합니다.
+      </span>
+    </section>
+
+
   </div>
 </body>
 </html>
