--- a/index.html
+++ b/index.html
@@ -14,21 +14,70 @@
       <ul class="member">
         <li><a href="./index.html">소개</a></li>
         <li><a href="./English.html">영어</a></li>
-        <li><a href="./Mentoring.html">멘토링</a></li>
+        <li><a href="./Mentoring.html">커리어</a></li>
       </ul>
     </header>
+    <!-- Bridge and Connect 소개 -->
     <section class="mission">
       <h1 class="mission__brand">
         Believe and Connect
       </h1>
-      <span class="mission__statement">
-        Believe and Connect는 한국을 전세계와 이어주는 사명을 가집니다. 
-        한국의 경력자분과 해당 학과 미국 대학생과 연결합니다.
-        해외 취업을 위한 영어를 효율적으로 준비할 수 있습니다.
-        또한, 해외취업을 희망하는 경력자와 유학생을 위해 현지 취업에 성공한 멘토를 연결합니다.
-      </span>
+      <div class="mission__statement">
+        <span class="mission__statement--text">
+          Believe and Connect는 한국인이 전세계로 진출할 수 있는 다리입니다.
+          한국의 경력자분과 해당 학과 미국 대학생과 연결합니다. 
+          해외 취업을 위한 영어를 효율적으로 준비할 수 있습니다.
+          또한, 해외취업을 희망하는 경력자와 유학생을 위해 현지 취업에 성공한 멘토를 연결합니다.
+        </span>
+      </div>
     </section>
 
+    <!-- 왜 이사이트가 탄생하였는지 -->
+    <section class="whyCreated">
+      <h2 class="whyCreated__point">
+        영어와 커리어 모두 갖춘 서비스
+        저희에게 정말 이런 서비스가 필요했습니다.
+        그래서 만들기로 결심했습니다.
+      </h2>
+      <span class="whyCreated__reason">
+        제주도, 작고 아름다운 섬에서 19년을 지냈습니다.
+        21살의 나이에 미국 캘리포니아에서 유학을 시작했습니다.
+        23살에 도착한 뉴욕에서 큰 꿈을 꾸기 시작했습니다.
+
+        그러나 저에게 준비된 게 없습니다. 영어도... 커리어도...
+
+        <span class="whyCreated__blog">저의 이야기:
+          <a href="https://blog.naver.com/rkdwogns1015/221269775703" alt="link to blog">
+            제주 촌놈 블로그
+          </a>
+        </span>
+      </span>
+
+    </section>
+
+    <!-- 기존 영어 수업 문제점제기 -->
+    <section class="problem-English">
+        <h2 class="problem-English__why">
+          해외취업을 위한 영어은 
+          <span class="problem-English__why--strong">면접과 해당분야</span>
+          에서 시작되어야합니다.
+        </h2>
+
+    </section>
+
+    <!-- 왜 커리어를 우리 홈페이지에서 이용해야되는지 -->
+    <section class="problem-career">
+
+    </section>
+
+    <!-- 연락처 -->
+    <footer class="contact">
+      <address class="address">
+        <span>제 이야기를 보시려면: <a href="https://blog.naver.com/rkdwogns1015/">제주 촌놈 블로그</a></span>
+        <span>전화: <a href="tel:01042265880">010-4226-5880</a></span>
+        <span>이메일: <a href="mailto:jhkang1015@gmail.com?subject=문의사항">jhkang1015@gmail.com</a></span>
+    </address>
+    </footer>
 
   </div>
 </body>
