--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Connect and Fly</title>
+  <title>Connect and Bridge</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header class="header">
-      <h1 class="logo"><a href="#"><img src="" alt="Connect and Fly logo"></a></h1>
+      <h1 class="logo">
+        <a href="./index.html">
+          <img class="logo__real" src="./ConnectBridge.jpg" alt="Connect and Fly logo">
+        </a>
+      </h1>
       <ul class="member">
-        <li><a href="./index.html">소개</a></li>
-        <li><a href="./English.html">영어</a></li>
-        <li><a href="./Mentoring.html">커리어</a></li>
+        <li><a class = "member__intro" href="./index.html">소개</a></li>
+        <li><a class = "member__english" href="./English.html">영어</a></li>
+        <li><a class = "member__career" href="./Mentoring.html">커리어</a></li>
       </ul>
     </header>
+
     <!-- Bridge and Connect 소개 -->
     <section class="mission">
       <h1 class="mission__brand">
-        Believe and Connect
+        Connect and Bridge
       </h1>
       <div class="mission__statement">
         <span class="mission__statement--text">
-          Believe and Connect는 한국인이 전세계로 진출할 수 있는 다리입니다.
-          한국의 경력자분과 해당 학과 미국 대학생과 연결합니다. 
-          해외 취업을 위한 영어를 효율적으로 준비할 수 있습니다.
+          Believe and Connect는 한국인이 전세계로 진출할 수 있는 다리입니다.<br>
+          한국의 경력자분과 해당 학과 미국 대학생과 연결합니다. <br>
+          해외 취업을 위한 영어를 효율적으로 준비할 수 있습니다.<br>
           또한, 해외취업을 희망하는 경력자와 유학생을 위해 현지 취업에 성공한 멘토를 연결합니다.
         </span>
       </div>
@@ -40,12 +45,18 @@
         그래서 만들기로 결심했습니다.
       </h2>
       <span class="whyCreated__reason">
-        제주도, 작고 아름다운 섬에서 19년을 지냈습니다.
-        21살의 나이에 미국 캘리포니아에서 유학을 시작했습니다.
-        23살에 도착한 뉴욕에서 큰 꿈을 꾸기 시작했습니다.
+        <div class="whyCreated__jeju"> 제주도, 작고 아름다운 섬에서 19년을 지냈습니다.</div>
+        <div class="whyCreated__aboard">21살의 나이에 미국 캘리포니아에서 유학을 시작했습니다.</div>
+        <div class="whyCreated__dream">23살에 도착한 뉴욕에서 큰 꿈을 꾸기 시작했습니다.</div>
 
-        그러나 저에게 준비된 게 없습니다. 영어도... 커리어도...
-
+        <div class="whyCreated__nothing">
+          그러나 저에게 준비된 게 없습니다. 영어도... 커리어도...<br>
+          더불어 저렴한 서비스를 찾기가 힘들었습니다...<br> 
+          수십만원이 넘어가는 영어 강의 와 컨설팅 비용
+        </div>
+        <div class="whyCreated__start">
+            그래서 Connect&Bridge를 만들었습니다.
+          </div>
         <span class="whyCreated__blog">저의 이야기:
           <a href="https://blog.naver.com/rkdwogns1015/221269775703" alt="link to blog">
             제주 촌놈 블로그
@@ -62,18 +73,38 @@
           <span class="problem-English__why--strong">면접과 해당분야</span>
           에서 시작되어야합니다.
         </h2>
+        <div class="problem-English__why--div">
+          하루의 3분의 1을 직장에서 보내게 됩니다<br>
+          공항 티켓팅 영어, 스타벅스 주문 영어, 호텔 예약 영어 과연 큰 비중을 차지할까요?
+        </div>
+        <div class="problem-English__real--div">
+          해외취업영어는 <strong>면접</strong>부터 바로 준비하여야 합니다.<br>
+          본인의 영어가 힘겹지만 <strong>면접</strong> 부터 <strong>해당필드영어</strong>로 나아가야합니다
+        </div>
 
     </section>
 
     <!-- 왜 커리어를 우리 홈페이지에서 이용해야되는지 -->
     <section class="problem-career">
-
+      <h2 class="problem-career__why">
+        해외취업은 해당분야 
+        <span class="problem-career__why--strong">경력자</span>
+        와 함께하는 길이 가장 빠릅니다.
+      </h2>
+      <div class="problem-career__reason">
+        취업하고 싶은 분야의 해외 취업 경력자랑 직접 얘기해보고 싶었습니다<br>
+        허나 어디에도 정말 <strong>제대로</strong> 경력자분이랑 얘기하기는 힘들었습니다
+      </div>
+      <div class="problem-career__final">
+        저의 시간은 돈보다 소중했습니다<br>
+        여러분의 시간은 돈보다 훨씬 소중합니다<br>
+      </div>
     </section>
 
     <!-- 연락처 -->
     <footer class="contact">
       <address class="address">
-        <span>제 이야기를 보시려면: <a href="https://blog.naver.com/rkdwogns1015/">제주 촌놈 블로그</a></span>
+        <span>이야기가 궁금하시다면: <a href="https://blog.naver.com/rkdwogns1015/">제주 촌놈 블로그</a></span>
         <span>전화: <a href="tel:01042265880">010-4226-5880</a></span>
         <span>이메일: <a href="mailto:jhkang1015@gmail.com?subject=문의사항">jhkang1015@gmail.com</a></span>
     </address>
