--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- Bridge and Connect 소개 -->
       <section class="mission">
           <h1 class="mission__brand">
-            Global Bridge - Testing Branch
+            Global Bridge
           </h1>
           <div class="mission__statement">
             <span class="mission__statement--text">
