--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         </h1>
         <ul class="nav">
           <a class="nav__intro" href="about.html"><li><p>소개</p></li></a>
-          <a class="nav__english" href="english.html"><li><p>영어</p></li></a>
-          <a class="nav__career" href="mentoring.html"><li><p>멘토링</p></li></a>
+          <a class="nav__career" href="mentoring.html"><li><p>브릿지</p></li></a>
+          <a class="nav__english" href="english.html"><li><p>언어</p></li></a>
+          <a class="nav__career" href="mentoring.html"><li><p>이야기</p></li></a>          
         </ul>
       </nav>
     </div>
@@ -27,28 +28,37 @@
       <div class="slider1">   
         <div class="slider-content">   
           <h1>Global Bridge</h1>
-          <p>Gbridge는 한국인이 전세계로 진출할 수 있는 다리입니다.</p>
+          <p>전세계 다양한 삶의 이야기를 들을 수 있어요!</p>
           <a href="about.html"><button><p>자세히 보기</p></button></a>
         </div>
       </div>
       <div class="slider2">
           <div class="slider-content">   
             <h1>Global Bridge</h1>
-            <p>Gbridge는 한국인이 전세계로 진출할 수 있는 다리입니다.</p>
+            <p>전세계로 진출할 수 있는 가장 빠른 다리입니다</p>
             <a href="about.html"><button><p>자세히 보기</p></button></a>
           </div>
       </div>
+      <div class="slider3">
+        <div class="slider-content">   
+          <h1>Global Bridge</h1>
+          <p>유학생이 직접 선별한 가장 친절한 외국인과 대화할 수 있어요</p>
+          <a href="about.html"><button><p>자세히 보기</p></button></a>
+        </div>
+    </div>
     </div>
     <!-- end of the header -->
 
     <div class="wrapper"> 
       <div class="section-one">
-        <h2>외국 취업을 준비하고 계신가요?</h2>
+        <h2>다양한 사람들과 성장하고 싶으신가요?</h2>
         <section class="instruction"></section>
           <img class="main-img-small" src="main-img-small.jpg">
-          <p>한국의 대학생 혹은 취업을 준비하시는 분들에게 해당 학과의 미국 대학생 및 현지 취업에 성공한 멘토를 연결해 드립니다. 본인이 희망하는 외국 취업에 더욱 가까워지도록 연결해 줄 브릿저(Bridger)를 만나 취업준비를 더욱 효율적으로 해보세요.</p>
-          <button><p>영어 브릿저 알아보기</p></button><br>
+          <div><p>전세계의 다양한 삶의 스토리 + 커리어 + 영어 모두 챙겨가세요!</p></div>
           <button><p>멘토링 브릿저 알아보기</p></button>
+          <button><p>영어   브릿저 알아보기</p></button>
+          <button><p>삶의 스토리 엿보기</p></button>
+          
         </section>
       </div>
     </div>
@@ -61,6 +71,12 @@
         <div class="mission__statement">
           <div class="mission__statement--text">
             <p><center>저희 서비스의 장점 세 가지를 소개합니다.</center></p>
+            <h3 class="firstAdvantage">1:1로 다양한 멘토 + 따뜻한 스토리를 만나보세요</h3>
+            <p class="firstAdvantage__why">유튜버, 해외취업 경력자, 워킹홀리데이 마스터, 디지털 노마드를 일대일로 만나실 수 있어요</p>
+            <h3 class="secondAdvantage">유학생이 직접 선별한 직무별 해외 대학생과 영어의 지름길</h3>
+            <p class="secondAdvantage__why">해외취업을 위해! 유학생이 <strong>직접</strong> 선별한 외국인</p>
+            <h3 class="thirdAdvantage">비용에 대한 걱정은 No No!</h3>
+            <p class="thirdAdvantage__why">여러분의 심정을 100% 이해하는 제주도 출신 운영자의 서러움을 담아 비용은 최저</p>
             </div>
         </div>
       </section>    
