--- a/English.html
+++ b/English.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Gbridge</title>
+  <title>English | Gbridge</title>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script src="main.js"></script>
   <link rel="stylesheet" href="style.css">
@@ -18,12 +18,12 @@
         </h1>
         <ul class="nav">
           <a class="nav__intro" href="about.html"><li><p>소개</p></li></a>
-          <a class="nav__english" href="english.html"><li style="border-bottom: solid 4px #30B08F"><p>영어</p></li></a>
-          <a class="nav__career" href="mentoring.html"><li><p>멘토링</p></li></a>
+          <a class="nav__career" href="mentoring.html"><li><p>취업</p></li></a>
+          <a class="nav__english" href="english.html"><li style="color: #FD8B55"><p>영어</p></li></a>
         </ul>
       </nav>
     </div>
-    <div class="about-header-img">   
+    <div class="english-header-img">   
       <div class="header-img-content">   
         <h1>English</h1>
       </div>
