--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Gbridge</title>
+  <title>Home | Gbridge</title>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script src="main.js"></script>
   <link rel="stylesheet" href="style.css">
@@ -18,8 +18,8 @@
         </h1>
         <ul class="nav">
           <a class="nav__intro" href="about.html"><li><p>소개</p></li></a>
-          <a class="nav__english" href="english.html"><li><p>영어</p></li></a>
-          <a class="nav__career" href="mentoring.html"><li><p>멘토링</p></li></a>
+          <a class="nav__english" href="mentoring.html"><li><p>취업</p></li></a>
+          <a class="nav__career" href="english.html"><li><p>영어</p></li></a>
         </ul>
       </nav>
     </div>
@@ -45,8 +45,8 @@
       <div class="section-one">
         <h2>외국 취업을 준비하고 계신가요?</h2>
         <section class="instruction"></section>
-          <img class="main-img-small" src="main-img-small.jpg">
-          <p>한국의 대학생 혹은 취업을 준비하시는 분들에게 해당 학과의 미국 대학생 및 현지 취업에 성공한 멘토를 연결해 드립니다. 본인이 희망하는 외국 취업에 더욱 가까워지도록 연결해 줄 브릿저(Bridger)를 만나 취업준비를 더욱 효율적으로 해보세요.</p>
+          
+          <p class="instruction-content"><img class="main-img-small" src="main-img-small.jpg">한국의 대학생 혹은 취업을 준비하시는 분들에게 해당 학과의 미국 대학생 및 현지 취업에 성공한 멘토를 연결해 드립니다. 본인이 희망하는 외국 취업에 더욱 가까워지도록 연결해 줄 브릿저(Bridger)를 만나 취업준비를 더욱 효율적으로 해보세요.</p>
           <button><p>영어 브릿저 알아보기</p></button><br>
           <button><p>멘토링 브릿저 알아보기</p></button>
         </section>
