--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Gbridge</title>
+  <title>About | Gbridge</title>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script src="main.js"></script>
   <link rel="stylesheet" href="style.css">
@@ -17,9 +17,9 @@
           <a href="index.html">Gbridge</a>
         </h1>
         <ul class="nav">
-          <a class="nav__intro" href="about.html"><li style="border-bottom: solid 4px #30B08F"><p>소개</p></li></a>
+          <a class="nav__intro" href="about.html"><li style="color: #FD8B55"><p>소개</p></li></a>
+          <a class="nav__career" href="mentoring.html"><li><p>취업</p></li></a>
           <a class="nav__english" href="english.html"><li><p>영어</p></li></a>
-          <a class="nav__career" href="mentoring.html"><li><p>멘토링</p></li></a>
         </ul>
       </nav>
     </div>
@@ -37,9 +37,9 @@
       </h2>
       <div class="mission__statement">
         <div class="mission__statement--text">
-          <p><br>Gbridge는 한국인이 전세계로 진출할 수 있는 다리입니다.<br>
+          <p><br>Gbridge는 한국인을 전세계로 연결 해 주는 다리입니다.<br>
           한국의 대학생 혹은 취업을 준비하시는 분들에게 해당 학과의 미국 대학생 및 현지 취업에 성공한 멘토를 연결해 드립니다. <br>
-          해외 취업을 위한 영어를 포함한 그 외의 모든 준비를 훨씬 효율적으로 하실 수 있습니다.</p>
+          비즈니스 영어를 포함한 해외 취업에 필요한 모든 준비를 훨씬 효율적으로 하실 수 있습니다.</p>
           </div>
       </div>
     </section>    
